store a courses object

--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -176,211 +176,290 @@ function processCourseData(d) {
   return items;
 }
 
-function exam() {
-  // Define variables for exam related stuff
-  let examMenu = document.getElementById('final-exam-child');
-  let examActive;
+// Define variables for exam related stuff
+let examMenu = document.getElementById('final-exam-child');
+let examActive;
 
-  if (typeof examMenu !== 'undefined' && examMenu !== null) {
-    examActive = examMenu.querySelector('.menu-item.active');
-  }
-
-  const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
-
-  // TODO: change this to support stored courses data
-  const storedStateName = 'gym-' + courseNum + '-state';
-
-  const COURSE_TYPES = {
-    FULL_COURSE: 'FULL_COURSE',
-    GYM_SHORT: 'GYM_SHORT',
-  };
-
-  const COURSE_TYPE = courseNum >= 100 ? COURSE_TYPES.FULL_COURSE : COURSE_TYPES.GYM_SHORT;
-
-  let PASSING_SCORE = 85;
-
-  if (COURSE_TYPE === COURSE_TYPES.FULL_COURSE) {
-    // full courses have a passing grade of 85
-    PASSING_SCORE = 85;
-  } else {
-    // gym shorts have a passing grade of 80
-    PASSING_SCORE = 80;
-  }
-
-  let gradeObserver;
-  let progressStatusCheck; // this is the interval we'll set to track status on this problem
-
-  if (typeof examActive !== 'undefined' && examActive !== null) {
-    console.log('[gym]: final exam page');
-
-    const examProblem = document.getElementById('exam-problem');
-
-    // this helper function gets a ton of information about the score for this particular problem
-    // based on information embedded on this page
-    function processScore() {
-
-      // look into the div with a class of .problem-progress for our score
-      // it contains a string that looks like:
-      //    80/100 Points (Graded)
-      // so we use .split(' ') to separate the fraction from the rest
-      var [fraction] = $('.problem-progress').text().split(' ');
-
-      // next we split the fraction in half by "/" to get the numerator and denominator
-      var [numerator, denominator] = fraction.split('/');
-
-      var correct = Number(numerator);
-      var outOf = Number(denominator);
-
-      var attempts_used = Number($('#attempts-used').text());
-      var attempts_total = Number($('#attempts-allowed').text());
-
-      return {
-        courseType: COURSE_TYPE,
-        passingScore: PASSING_SCORE,
-        score: Number(numerator / denominator * 100),
-        correct,
-        outOf,
-        attempts_used,
-        attempts_total,
-        attempts_remaining: attempts_total - attempts_used,
-      };
-    };
-
-    function showProblemProgress(state) {
-      let {
-        attempts_used,
-        attempts_total,
-        attempts_remaining,
-        correct,
-        courseType,
-        outOf,
-        score,
-        passingScore,
-      } = processScore();
-
-      if (!correct || !outOf) {
-        return;
-      }
-
-      // update exam score span
-      $('.exam-score-container').text(score);
-
-      console.log('[gym]: state: ', state);
-
-      // we have a score, let's do stuff
-      if (score >= passingScore) {
-
-        //we passed! show passing div for the type of course they took
-        $(".passed_modal." + courseType).removeClass('hidden');
-        $(".try_again_modal").addClass('hidden');
-        $(".failed_modal").addClass('hidden');
-
-        if (state === 'load') {
-          console.log('[gym]: load state only.');
-        } else if (state === 'submit') {
-          console.log('[gym]: submit state. ajax submission occurs here.');
-
-          //generate the certificate through the API
-          // $.ajax({
-          //   type:     'POST',
-          //   url:      '/accredible/request_certificate',
-          //   async:     false,
-          //   data:     {'course_id': window.$$course_id},
-          //   success:  function(data) {
-          //     // console.log('[gym] certificate request successful: ', data);
-          //   }
-          // });
-        }
-
-
-      } else {
-        //we failed :( see if we have another attempt
-        if (attempts_remaining > 0) {
-          $(".passed_modal").addClass('hidden');
-          $(".try_again_modal." + courseType).removeClass('hidden');
-          $(".failed_modal").addClass('hidden');
-        } else {
-          $(".passed_modal").addClass('hidden');
-          $(".try_again_modal").addClass('hidden');
-          $(".failed_modal").removeClass('hidden');
-        }
-      }
-
-      if (state === 'load') {
-        console.log('load state, disconnecting observer');
-        gradeObserver.disconnect();
-      } else if (state === 'submit') {
-        console.log('submit state, observer remains active');
-        sessionStorage.removeItem(storedStateName);
-      }
-    }
-
-    function checkStatus(state){
-      const {
-        attempts_used,
-        correct,
-      } = processScore();
-
-      if (attempts_used > 0 || correct > 0) {
-        clearInterval(progressStatusCheck);
-        showProblemProgress(state);
-      }
-    }
-
-    function observatory(state) {
-      // session storage stuff
-      // TODO: retrieve courses stored data
-      // let data = retrieve('courses');
-      
-      let storedState = retrieve(storedStateName);
-
-      if (!storedState) {
-        console.log('nothing stored. storing: ', state);
-
-        // TODO: store all course data without overwriting anything
-        // store('courses', JSON.stringify());
-
-        store(storedStateName, state);
-      // } else if (storedState !== state) {
-      //   console.log('state mismatch! storedState: ', storedState, '\nstate: ', state);
-      // } else if (storedState === state) {
-      //   console.log('states match! storedState: ', storedState, '\nstate: ', state);
-      } else {
-        state = storedState;
-        console.log('state is now: ', state);
-      }
-
-      gradeObserver = new MutationObserver((mutations) => {
-        mutations.forEach(function listMutations(mutation) {
-          console.log('[gym] mutation type: ', mutation);
-        });
-
-        // reset interval if we detect a grade change
-        if (typeof progressStatusCheck !== 'undefined'){
-          clearInterval(progressStatusCheck);
-        }
-        // set interval on initial page load
-        progressStatusCheck = setInterval(checkStatus(state), 200);
-      });
-
-      gradeObserver.observe(document.querySelector('.problem-progress'), {childList: true});
-    }
-
-    document.getElementById('check-button').addEventListener('click', function submitButtonClick() {
-      console.log('[gym] check exam button clicked');
-      store(storedStateName, 'submit');
-
-      observatory('submit');
-
-      // scroll to show the results message
-      document.getElementById('course_passed_message').scrollIntoView();
-
-    }, false);
-
-    observatory('load');
-  }
+if (typeof examMenu !== 'undefined' && examMenu !== null) {
+  examActive = examMenu.querySelector('.menu-item.active');
 }
 
-// Initialize exam function (do not wrap this in a document ready or anything similar, otherwise the mutation observer will not work properly)
-exam();
+const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
+
+// TODO: change this to support stored courses data
+const storedStateName = 'gym-' + courseNum + '-state';
+
+const COURSE_TYPES = {
+  FULL_COURSE: 'FULL_COURSE',
+  GYM_SHORT: 'GYM_SHORT',
+};
+
+const COURSE_TYPE = courseNum >= 100 ? COURSE_TYPES.FULL_COURSE : COURSE_TYPES.GYM_SHORT;
+
+let PASSING_SCORE = 85;
+
+if (COURSE_TYPE === COURSE_TYPES.FULL_COURSE) {
+  // full courses have a passing grade of 85
+  PASSING_SCORE = 85;
+} else {
+  // gym shorts have a passing grade of 80
+  PASSING_SCORE = 80;
+}
+
+let gradeObserver;
+let progressStatusCheck; // this is the interval we'll set to track status on this problem
+
+if (typeof examActive !== 'undefined' && examActive !== null) {
+  console.log('[gym]: final exam page');
+
+  const examProblem = document.getElementById('exam-problem');
+
+  // this helper function gets a ton of information about the score for this particular problem
+  // based on information embedded on this page
+  function processScore() {
+
+    // look into the div with a class of .problem-progress for our score
+    // it contains a string that looks like:
+    //    80/100 Points (Graded)
+    // so we use .split(' ') to separate the fraction from the rest
+    var [fraction] = $('.problem-progress').text().split(' ');
+
+    // next we split the fraction in half by "/" to get the numerator and denominator
+    var [numerator, denominator] = fraction.split('/');
+
+    var correct = Number(numerator);
+    var outOf = Number(denominator);
+
+    var attempts_used = Number($('#attempts-used').text());
+    var attempts_total = Number($('#attempts-allowed').text());
+
+    return {
+      courseType: COURSE_TYPE,
+      passingScore: PASSING_SCORE,
+      score: Number(numerator / denominator * 100),
+      correct,
+      outOf,
+      attempts_used,
+      attempts_total,
+      attempts_remaining: attempts_total - attempts_used,
+    };
+  };
+
+  function showProblemProgress(state) {
+    let {
+      attempts_used,
+      attempts_total,
+      attempts_remaining,
+      correct,
+      courseType,
+      outOf,
+      score,
+      passingScore,
+    } = processScore();
+
+    if (!correct || !outOf) {
+      return;
+    }
+
+    // update exam score span
+    $('.exam-score-container').text(score);
+
+    console.log('[gym]: state: ', state);
+
+    // we have a score, let's do stuff
+    if (score >= passingScore) {
+
+      //we passed! show passing div for the type of course they took
+      $(".passed_modal." + courseType).removeClass('hidden');
+      $(".try_again_modal").addClass('hidden');
+      $(".failed_modal").addClass('hidden');
+
+      if (state === 'load') {
+        console.log('[gym]: load state only.');
+      } else if (state === 'submit') {
+        console.log('[gym]: submit state. ajax submission occurs here.');
+
+        //generate the certificate through the API
+        // $.ajax({
+        //   type:     'POST',
+        //   url:      '/accredible/request_certificate',
+        //   async:     false,
+        //   data:     {'course_id': window.$$course_id},
+        //   success:  function(data) {
+        //     // console.log('[gym] certificate request successful: ', data);
+        //   }
+        // });
+      }
+
+
+    } else {
+      //we failed :( see if we have another attempt
+      if (attempts_remaining > 0) {
+        $(".passed_modal").addClass('hidden');
+        $(".try_again_modal." + courseType).removeClass('hidden');
+        $(".failed_modal").addClass('hidden');
+      } else {
+        $(".passed_modal").addClass('hidden');
+        $(".try_again_modal").addClass('hidden');
+        $(".failed_modal").removeClass('hidden');
+      }
+    }
+
+    if (state === 'load') {
+      console.log('load state, disconnecting observer');
+      gradeObserver.disconnect();
+    } else if (state === 'submit') {
+      console.log('submit state, observer remains active');
+
+      // TODO: remove state
+      sessionStorage.removeItem(storedStateName);
+    }
+  }
+
+  function checkStatus(state){
+    const {
+      attempts_used,
+      correct,
+    } = processScore();
+
+    if (attempts_used > 0 || correct > 0) {
+      clearInterval(progressStatusCheck);
+      showProblemProgress(state);
+    }
+  }
+
+  let courses = retrieve('courses');
+
+  // For testing
+  const dummyData = [{"id":100},{"id":101},{"id":102},{"id":103},{"id":104},{"id":105},{"id":106},{"id":107},{"id":108},{"id":109}];
+
+  if (!courses) {
+    courses = JSON.stringify(dummyData);
+  }
+
+  function updateState(obj, objName, id, newState) {
+    data = JSON.parse(obj);
+
+    // iterate through all available data
+    for (var i = 0; i < data.length; i++) {
+      var datum = data[i];
+
+      // if we have a match
+      if (datum.id === id) {
+        if (datum.state) {
+          // state = storedState = datum.state;
+          console.log(`datum.state exists: ${datum.state}`);
+          // if the stored state doesn't match the newState, update it
+          if (datum.state !== newState) {
+            console.warn(`${datum.state} doesn't match ${newState}! Updating.`);
+            datum.state = newState;
+          }
+        } else {
+          console.warn(`no datum.state, creating a new state`);
+          datum.state = state = newState;
+        }
+        
+        console.log(`datum ${datum.id} state: ${datum.state}`);
+      }
+    }
+
+    // store the revised data
+    store(objName, JSON.stringify(data));
+  }
+
+  function observatory(state) {
+    let storedState;
+
+    let course;
+    let data;
+
+    // create courses object if none exists
+    if (!courses) {
+      courses = [];
+
+      let obj = {
+        "id": courseNum,
+        "state": state
+      };
+
+      courses.push(obj);
+
+      store('courses', JSON.stringify(courses));
+
+    } else {
+      // if we have courses, check to see if there's a stored state value
+
+      updateState(courses, 'courses', courseNum, state);
+
+      // items = JSON.parse(courses);
+
+      // // iterate through all available items
+      // for (var i = 0; i < items.length; i++) {
+      //   var item = items[i];
+
+      //   // if we have a match
+      //   if (item.id === courseNum) {
+      //     if (item.state) {
+      //       state = storedState = item.state;
+      //       console.log(`item has stored state: ${item.state}`);
+      //     } else {
+      //       console.warn(`item.state is null`);
+      //       item.state = state;
+      //     }
+          
+      //     console.log(`item ${item.id} state: ${item.state}`);
+      //   }
+      // }
+
+      // // store the revised data
+      // store('courses', JSON.stringify(items));
+      
+    }
+
+    // if (!storedState) {
+    //   console.log('nothing stored. storing: ', state);
+
+    //   // TODO: store all course data without overwriting anything
+    //   // store('courses', JSON.stringify());
+
+    //   // store(storedStateName, state);
+    // // } else if (storedState !== state) {
+    // //   console.log('state mismatch! storedState: ', storedState, '\nstate: ', state);
+    // // } else if (storedState === state) {
+    // //   console.log('states match! storedState: ', storedState, '\nstate: ', state);
+    // } else {
+    //   // state = storedState;
+    //   // console.log('state is now: ', state);
+    // }
+
+    gradeObserver = new MutationObserver((mutations) => {
+      mutations.forEach(function listMutations(mutation) {
+        console.log('[gym] mutation type: ', mutation);
+      });
+
+      // reset interval if we detect a grade change
+      if (typeof progressStatusCheck !== 'undefined'){
+        clearInterval(progressStatusCheck);
+      }
+      // set interval on initial page load
+      progressStatusCheck = setInterval(checkStatus(state), 200);
+    });
+
+    gradeObserver.observe(document.querySelector('.problem-progress'), {childList: true});
+  }
+
+  document.getElementById('check-button').addEventListener('click', function submitButtonClick() {
+    console.log('[gym] check exam button clicked');
+    // store(storedStateName, 'submit');
+    updateState(courses, 'courses', courseNum, 'submit');
+
+    // observatory('submit');
+
+    // scroll to show the results message
+    // document.getElementById('course_passed_message').scrollIntoView();
+
+  }, false);
+
+  observatory('load');
+}
 </script>
