Try to fix state

--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -491,7 +491,7 @@ if (examActive) {
     if (!hasId) {
       let obj = {
         "id": courseNum,
-        "state": "load"
+        "state": newState
       };
 
       data.push(obj);
